--- a/src/app/login/new-password/new-password.component.html
+++ b/src/app/login/new-password/new-password.component.html
@@ -1,17 +1,18 @@
 <div class="row">
   <div class="col-sm rounded bg-light p-4 mb-4 mx-2">
-    <form style="width: 18rem;">
+    <form #newPwdForm="ngForm" style="width: 18rem;">
       <div class="form-group">
         <label for="pwd">New password</label>
-        <input id="pwd" type="password" class="form-control" name="pwd" placeholder="Password" [(ngModel)]="password"
-          required #pwd="ngModel">
-        <div *ngIf="pwd.invalid && (pwd.dirty || pwd.touched)" class=" alert alert-warning mx-1 my-0">
-          <div *ngIf="pwd.errors.required">
-            Password is missing or invalid
-          </div>
+        <input id="pwd" type="password" class="form-control" 
+          name="pwd" placeholder="Password" (ngModel)="password"
+          required>
+        <div *ngIf="newPwdForm.controls.pwd?.invalid && 
+          newPwdForm.controls.pwd?.dirty && newPwdForm.controls.pwd?.touched" 
+          class=" alert alert-warning mx-1 my-0">
+            Looks like the password isn't valid...
         </div>
       </div>
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#resetModal"
+      <button type="button" [disabled]="newPwdForm.invalid" class="btn btn-primary" data-toggle="modal" data-target="#resetModal"
         (click)="newPassword()">Confirm password</button>
       <div *ngIf="message" class=" alert alert-warning my-2">{{message}}</div>
     </form>
