--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -15,7 +15,7 @@
       </button>
       <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
         <a class="dropdown-item" (click)="addChild(okr._id)" data-toggle="modal" data-target="#modal">Add child OKR</a>
-        <a class="dropdown-item" routerLink="/edit-okr/{{okr._id}}">Edit</a>
+        <a class="dropdown-item" [routerLink]="['/edit-okr', okr._id]">Edit</a>
         <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
       </div>
     </span>
