design and form validation changes

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,6 +1,6 @@
 <div class="row">
-  <div class="col-sm mb-4">
-    <div class="bg-light rounded p-4 h-100">
+  <div class="col-sm">
+    <div class="text-light rounded p-4 h-100">
       <form (submit)="register()" style="width: 18rem;">
         <div class="form-group">
           <label for="company">Company</label>
@@ -34,11 +34,13 @@
         </div>
         <div *ngIf="message" class=" alert alert-warning mx-1 my-0">{{message}}</div>
         <button type="submit" class="btn btn-success m-2">Register</button>
+        <br>
+        <button type="button" class="btn btn-link btn-sm" [routerLink]="['/login']">Already have a user? Login here.</button>
       </form>
     </div>
   </div>
-  <div class="col-sm mb-4">
-    <div class="bg-light rounded p-4 h-100">
+  <div class="col-sm pt-4">
+    <div class="text-light rounded p-4">
       <h5 class="font-italic">This is the simplest OKR tool on the web.</h5>
       <h5>Why Objectives and Key Results?</h5>
       <ul>
