--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,36 +1,33 @@
 <div class="row">
-  <div class="col-sm mb-4">
-    <div class="bg-light rounded p-4 h-100">
-      <form #loginForm="ngForm" (ngSubmit)="login()" style="width: 18rem;" novalidate>
+  <div class="col-sm pt-4">
+    <div class="text-light rounded p-4 h-100">
+      <form [formGroup]="loginForm" (ngSubmit)="login(loginForm.value)" style="width: 18rem;" novalidate>
         <div class="form-group">
           <label for="email">Email</label>
-          <input id="email" name="email" type="email" class="form-control" placeholder="Enter email"
-            (ngModel)="credentials.email" required>
-          <div *ngIf="loginForm.controls.email?.invalid &&
-            (loginForm.controls.email?.dirty && loginForm.controls.email?.touched)" 
-            class=" alert alert-warning mx-1 my-0">
-              Email is missing or invalid
-          </div>
+          <em *ngIf="email.touched && email.invalid">
+            Required
+          </em>
+          <input id="email" type="email" class="form-control" placeholder="Enter email" formControlName="email"
+            required>
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input id="password" type="password" class="form-control" name="password" placeholder="Password"
-            (ngModel)="credentials.password" required>
-          <div *ngIf="loginForm.controls.password?.invalid && 
-          (loginForm.controls.password?.dirty && loginForm.controls.password?.touched)" 
-          class=" alert alert-warning mx-1 my-0">
-              Password is missing or invalid
-          </div>
+          <em *ngIf="password.touched && password.invalid">
+            Required
+          </em>
+          <input id="password" type="password" class="form-control" formControlName="password" placeholder="Password"
+            required>
         </div>
         <div *ngIf="loginMessage" class=" alert alert-warning mx-1 my-0">{{loginMessage}}</div>
-        <button type="submit" [disabled]="loginForm.disabled" class="btn btn-primary m-2">Log in</button>
+        <button type="submit" [disabled]="loginForm.invalid && loginForm.touched" class="btn btn-primary m-2">Log
+          in</button>
         <button type="button" routerLink="/register" class="btn btn-success m-2">Register</button>
       </form>
       <button class="btn btn-sm btn-link" routerLink="/resetpassword">Forgot your password?</button>
     </div>
   </div>
-  <div class="col-sm mb-4">
-    <div class="bg-light rounded p-4 h-100">
+  <div class="col-sm pt-4">
+    <div class="text-light rounded p-4 h-100">
       <h5 class="font-italic">This is the simplest OKR tool on the web.</h5>
       <h5>Why Objectives and Key Results?</h5>
       <ul>
