--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm">
-    <div class="text-light rounded p-4 h-100">
-      <form (submit)="register()" style="width: 18rem;">
+    <div class="text-light rounded p-4">
+      <form (submit)="register()">
         <div class="form-group">
           <label for="company">Company</label>
           <input type="text" class="form-control" name="company" placeholder="Enter company"
