--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="okr">
   <button id="openModal" class="btn btn-primary my-4 ml-1" data-toggle="modal" data-target="#modal" (click)="clearParent()">
+    <fa-icon class="mr-1" [icon]="faPlusCircle"></fa-icon>
     New OKR
   </button>
   <!-- Modal -->
