--- a/src/app/okr/okr.component.html
+++ b/src/app/okr/okr.component.html
@@ -6,18 +6,40 @@
         <span octicon="kebab-horizontal" width="15px"></span>
       </a>
       <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-        <a class="dropdown-item" (click)="addChild(okr._id)" data-toggle="modal" data-target="#modal">Add child OKR</a>
-        <a class="dropdown-item" [routerLink]="['/edit-okr', okr._id]">Edit</a>
-        <a class="dropdown-item" (click)="deleteOKR()">Delete</a>
+        <a class="dropdown-item" (click)="addChild(okr._id)" data-toggle="modal" data-target="#modal">
+          <fa-icon [icon]="faPlusCircle"></fa-icon>
+          Add child OKR
+        </a>
+        <a class="dropdown-item" [routerLink]="['/edit-okr', okr._id]">
+          <fa-icon [icon]="faPen"></fa-icon>
+          Edit
+        </a>
+        <a class="dropdown-item" (click)="deleteOKR()">
+          <fa-icon [icon]="faTrashAlt"></fa-icon>
+          Delete
+        </a>
       </div>
     </span>
-    <p *ngIf="owner" class="badge badge-primary float-right m-1">{{owner.name}}</p>
-    <p *ngIf="!averageProgress && averageProgress!=0" class="badge badge-secondary float-right m-1">0%</p>
-    <p *ngIf="averageProgress<30" class="badge badge-secondary float-right m-1">{{averageProgress}}%</p>
-    <p *ngIf="averageProgress<70 && averageProgress>=30" class="badge badge-primary float-right m-1">
+    <p *ngIf="owner" class="badge badge-primary float-right m-1">
+      <fa-icon [icon]="faUserNinja"></fa-icon>
+      {{owner.name}}
+    </p>
+    <p *ngIf="!averageProgress && averageProgress!=0" class="badge badge-secondary float-right m-1">
+      <fa-icon [icon]="faBatteryEmpty"></fa-icon>
+      0%
+    </p>
+    <p *ngIf="averageProgress<30" class="badge badge-secondary float-right m-1">
+      <fa-icon [icon]="faBatteryEmpty"></fa-icon>
       {{averageProgress}}%
     </p>
-    <p *ngIf="averageProgress>=70" class="badge badge-success float-right">{{averageProgress}}%</p>
+    <p *ngIf="averageProgress<70 && averageProgress>=30" class="badge badge-primary float-right m-1">
+      <fa-icon [icon]="faAdjust"></fa-icon>
+      {{averageProgress}}%
+    </p>
+    <p *ngIf="averageProgress>=70" class="badge badge-success float-right m-1">
+      <fa-icon [icon]="faCheckCircle"></fa-icon>
+      {{averageProgress}}%
+    </p>
   </span>
   <h5 class="card-title">
     <span>{{okr.objective}}</span>
@@ -28,18 +50,31 @@
         <li *ngFor="let kr of keyResults"
           class="list-group-item bg-white border border-primary rounded-0 border-right-0 border-top-0 border-bottom-0 py-1 my-1 mr-2">
           {{kr.keyResult}}
-          <span *ngIf="!kr.progress && kr.progress!=0" class="badge badge-secondary">0%</span>
-          <span *ngIf="kr.progress<30" class="badge badge-secondary">{{kr.progress}}%</span>
-          <span *ngIf="kr.progress>=30 && kr.progress<70" class="badge badge-primary">{{kr.progress}}%</span>
-          <span *ngIf="kr.progress>=70" class="badge badge-success">{{kr.progress}}%</span>
+          <span *ngIf="!kr.progress && kr.progress!=0" class="badge badge-secondary">
+            <fa-icon [icon]="faBatteryEmpty"></fa-icon>
+            0%
+          </span>
+          <span *ngIf="kr.progress<30" class="badge badge-secondary">
+            <fa-icon [icon]="faBatteryEmpty"></fa-icon>
+            {{kr.progress}}%
+          </span>
+          <span *ngIf="kr.progress>=30 && kr.progress<70" class="badge badge-primary">
+            <fa-icon [icon]="faAdjust"></fa-icon>
+            {{kr.progress}}%
+          </span>
+          <span *ngIf="kr.progress>=70" class="badge badge-success">
+            <fa-icon [icon]="faCheckCircle"></fa-icon>
+            {{kr.progress}}%
+          </span>
         </li>
       </ul>
     </div>
     <div *ngIf="!showChildren && (childrenCount > 0)" class="btn btn-link p-0 mt-2" (click)="getChildren()">
-      Child OKRs ({{childrenCount}})
+      <fa-icon [icon]="faChevronDown"></fa-icon>
+      {{childrenCount}}
     </div>
     <div *ngIf="showChildren && (childrenCount > 0)" class="btn btn-link p-0 mt-2" (click)="hideChildren()">
-      Hide Child OKRs
+      <fa-icon [icon]="faChevronUp"></fa-icon>
     </div>
   </div>
 </div>
