--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,24 +1,40 @@
 <h2 class="text-light m-1">
   {{user.company}}'s users.
 </h2>
-<button *ngIf="!userForm" class="btn btn-primary my-4 mx-1" (click)="showUserForm()">Add User</button>
+<button *ngIf="!userForm" class="btn btn-primary my-4 mx-1" (click)="showUserForm()">
+  <fa-icon [icon]="faPlusCircle"></fa-icon>
+  Add User
+</button>
 <app-new-user *ngIf="userForm" (hide)="hideUserForm($event)"></app-new-user>
 <div class="table-responsive-sm bg-light py-2 rounded mx-1">
   <table class="table table-striped bg-light my-1">
     <thead>
       <tr style="border-top: 0">
-        <th scope="col">Name</th>
-        <th scope="col">Email</th>
+        <th scope="col">
+          Name
+        </th>
+        <th scope="col">
+          Email
+        </th>
         <th scope="col"></th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let user of users;let i = index">
-        <td>{{user.name}}</td>
-        <td>{{user.email}}</td>
+        <td>
+          <fa-icon [icon]="faUserNinja"></fa-icon>
+          {{user.name}}
+        </td>
+        <td>
+          <fa-icon [icon]="faEnvelope"></fa-icon>
+          {{user.email}}
+        </td>
         <td>
           <button type="button" class="btn btn-sm btn-danger float-right table-button mx-1" data-toggle="modal"
-            data-target="#deleteModal" (click)="initDelete(user)">Delete</button>
+            data-target="#deleteModal" (click)="initDelete(user)">
+            <fa-icon [icon]="faTrashAlt"></fa-icon>
+            Delete
+          </button>
         </td>
       </tr>
     </tbody>
