--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,42 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand" [routerLink]="['']">Pure Objectives and Key Results</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-        <a routerLink="/login" class="nav-link">Log in</a>
-      </li>
-      <li *ngIf="!auth.isLoggedIn()" class="nav-item">
-        <a routerLink="/register" class="nav-link">Register</a>
-      </li>
-      <li *ngIf="auth.isLoggedIn()" class="nav-item">
-        <a routerLink="/okr-tree" class="nav-link">
-          <fa-icon [icon]="faSitemap"></fa-icon>
-          Tree view
-        </a>
-      </li>
-      <li *ngIf="auth.isLoggedIn()" class="nav-item">
-        <a routerLink="/company/users" class="nav-link">
-          <fa-icon [icon]="faUsers"></fa-icon>
-          Users
-        </a>
-      </li>
-      <li *ngIf="auth.isLoggedIn()" class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-          aria-haspopup="true" aria-expanded="false">
-          <fa-icon [icon]="faUserNinja"></fa-icon>
-          {{auth.getUserDetails()?.name}}
-        </a>
-        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="/" (click)="auth.logout()">Logout</a>
-        </div>
-      </li>
-    </ul>
-  </div>
-</nav>
+<app-navbar></app-navbar>
 <main class="bd-masthead bg-dark" role="main">
   <div class="container-fluid pt-4" style="min-height: 70vh;">
     <div class="row">
@@ -46,38 +8,4 @@
     </div>
   </div>
 </main>
-<!--Footer-->
-<footer class="page-footer font-small bg-primary text-white pt-4">
-  <div class="container-fluid text-center text-md-left">
-    <div class="row">
-      <div class="col-md-6 mt-md-0 mt-3">
-        <h5 class="text-uppercase">Resources</h5>
-        <ul class="list-group">
-          <li class="list-group-item active">
-            <a class="text-light" [routerLink]="['faq']">
-              <fa-icon [icon]="faQuestionCircle"></fa-icon>
-              Frequently Asked Questions
-            </a>
-          </li>
-        </ul>
-      </div>
-      <hr class="clearfix w-100 d-md-none pb-3">
-      <div class="col-md-3 mb-md-0 mb-3">
-        <h5 class="text-uppercase">Get in touch</h5>
-        <ul class="list-group">
-          <li class="list-group-item active">
-            <a class="text-light" href="http://www.nilseng.com" target="_blank">
-              <fa-icon [icon]="faBlog"></fa-icon>
-              nilseng.com
-            </a>
-          </li>
-          <li class="list-group-item active">
-            <fa-icon [icon]="faEnvelope"></fa-icon>
-            <a class="text-light" href="mailto:teodor.nilseng@gmail.com">teodor.nilseng@gmail.com</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Consulting</div>
-</footer>
+<app-footer></app-footer>
