--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="okr">
-  <button id="openModal" class="btn btn-primary my-4 ml-1" data-toggle="modal" data-target="#modal" (click)="clearParent()">
+  <button id="openModal" class="btn btn-primary my-4 ml-1" data-toggle="modal" data-target="#modal" (click)="clearForm()">
     <fa-icon class="mr-1" [icon]="faPlusCircle"></fa-icon>
     New OKR
   </button>
@@ -8,7 +8,7 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="modalLabel">Create a new Objective with Key Results</h5>
+          <h5 class="modal-title" id="modalLabel">Create a new OKR</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -17,7 +17,7 @@
 
           <input class="form-control input-lg p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
           <p *ngIf="noObjective" class=" alert alert-warning m-0 p-1">An objective is required to save an OKR</p>
-          <div class="form-row bg-light rounded p-0 mx-0 my-1" *ngFor="let kr of keyResults;index as i">
+          <div class="form-row bg-light rounded p-0 mx-0 my-1" *ngFor="let kr of okr.keyResults;index as i">
             <div *ngIf="kr" class="form-group col-md-7 p-0 m-0">
               <label class="badge m-0" for="keyResult">Key Result</label>
               <input class="form-control input-sm p-1" [(ngModel)]="kr.keyResult" placeholder="Key Result"
@@ -39,7 +39,7 @@
             <label class="mt-1" for="ownerSearchBox">Assigned to <span *ngIf="owner"
                 class="badge badge-primary">{{owner.name}}</span></label>
             <input class="form-control input-sm p-1" #ownerSearchBox (keyup)="ownerSearch(ownerSearchBox.value)"
-              placeholder="Assign to user" />
+              placeholder="Search for user" />
             <ul *ngIf="users$" class="list-group px-1 py-0">
               <li *ngFor="let user of users$ | async" class="list-group-item py-0 my-0">
                 <a class="btn" [ngClass]="{'bg-light text-primary': !!owner && user._id==owner._id}"
@@ -50,13 +50,13 @@
             </ul>
           </div>
           <div class="form-group">
-            <label for="parentSearchBox">Linked to <span *ngIf="parent"
+            <label *ngIf="parent" for="parentSearchBox">Linked to <span *ngIf="parent"
                 class="badge badge-primary">{{parent.objective}}</span></label>
             <input class="form-control input-sm p-1" #parentSearchBox (keyup)="parentSearch(parentSearchBox.value)"
-              placeholder="Link to parent objective" />
-            <ul *ngIf="users$" class="list-group px-1 py-0">
+              placeholder="Search for parent OKR"/>
+            <ul *ngIf="parents$" class="list-group px-1 py-0">
               <li *ngFor="let parent of parents$ | async" class="list-group-item py-0 my-0">
-                <a class="btn" [ngClass]="{'bg-light text-primary': parent._id==okr.parent}"
+                <a class="btn" [ngClass]="{'bg-light text-primary': parent._id===okr.parent}"
                   (click)="link(parent);parentSearchBox.value=''">
                   {{parent.objective}}
                 </a>
@@ -65,7 +65,7 @@
           </div>
         </div>
           <div class="modal-footer">
-            <button class="btn btn-success mr-1" (click)="save()" data-dismiss="modal">Save</button>
+            <button class="btn btn-success mr-1" [disabled]="!okr.objective" (click)="save()" data-dismiss="modal">Save</button>
           </div>
       </div>
     </div>
