--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -31,5 +31,5 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Consulting</div>
+    <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Danielsen Data</div>
   </footer>
