added edit OKR modal

--- a/src/app/company/company.component.html
+++ b/src/app/company/company.component.html
@@ -2,8 +2,9 @@
   {{user?.company}}'s objectives and key results.
 </h2>
 <app-new-okr [parentId]="parentId" (savedOkr)="savedOkr($event)" (clearP)="clearParent()"></app-new-okr>
+<app-edit-okr *ngIf="okrToEdit" [okr]="okrToEdit" (savedOkr)="savedOkr($event)"></app-edit-okr>
 <div *ngIf="okrs" class="pb-4">
-  <app-okr *ngFor="let okr of okrs" [okr]="okr" (hideOkrId)="hideOkr($event)" (parentId)="addChild($event)">
+  <app-okr *ngFor="let okr of okrs" [okr]="okr" (hideOkrId)="hideOkr($event)" (okrToEdit)="editOkr($event)" (parentId)="addChild($event)">
   </app-okr>
 </div>
 <div *ngIf="okrs?.length===0">
