--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,35 +1,37 @@
 <!--Footer-->
 <footer class="page-footer font-small bg-primary text-white pt-4">
-    <div class="container-fluid text-center text-md-left">
-      <div class="row">
-        <div class="col-md-6 mt-md-0 mt-3">
-          <h5 class="text-uppercase">Resources</h5>
-          <ul class="list-group">
-            <li class="list-group-item active">
-              <a class="text-light" [routerLink]="['faq']">
-                <fa-icon [icon]="faQuestionCircle"></fa-icon>
-                Frequently Asked Questions
-              </a>
-            </li>
-          </ul>
-        </div>
-        <hr class="clearfix w-100 d-md-none pb-3">
-        <div class="col-md-3 mb-md-0 mb-3">
-          <h5 class="text-uppercase">Get in touch</h5>
-          <ul class="list-group">
-            <li class="list-group-item active">
-              <a class="text-light" href="http://www.nilseng.com" target="_blank">
-                <fa-icon [icon]="faBlog"></fa-icon>
-                nilseng.com
-              </a>
-            </li>
-            <li class="list-group-item active">
+  <div class="container-fluid text-center text-md-left">
+    <div class="row">
+      <div class="col-md-6 mt-md-0 mt-3">
+        <h5 class="text-uppercase">Resources</h5>
+        <ul class="list-group">
+          <li class="list-group-item active">
+            <a class="text-light" [routerLink]="['faq']">
+              <fa-icon [icon]="faQuestionCircle"></fa-icon>
+              Frequently Asked Questions
+            </a>
+          </li>
+        </ul>
+      </div>
+      <hr class="clearfix w-100 d-md-none pb-3">
+      <div class="col-md-3 mb-md-0 mb-3">
+        <h5 class="text-uppercase">Get in touch</h5>
+        <ul class="list-group">
+          <li class="list-group-item active">
+            <a class="text-light" href="http://www.nilseng.com" target="_blank">
+              <fa-icon [icon]="faBlog"></fa-icon>
+              nilseng.com
+            </a>
+          </li>
+          <li class="list-group-item active">
+            <a class="text-light ml-1" href="mailto:teodor.nilseng@gmail.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
-              <a class="text-light ml-1" href="mailto:teodor.nilseng@gmail.com">teodor.nilseng@gmail.com</a>
-            </li>
-          </ul>
-        </div>
+              teodor.nilseng@gmail.com
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Danielsen Data</div>
-  </footer>
+  </div>
+  <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Danielsen Data</div>
+</footer>
