--- a/src/app/okr/new-okr/new-okr.component.html
+++ b/src/app/okr/new-okr/new-okr.component.html
@@ -30,7 +30,7 @@
             </div>
             <div *ngIf="kr" class="form-group col-auto p-0 pt-4 m-0 ml-2">
               <label class="sr-only" for="remove">Remove</label>
-              <button class="btn btn-sm btn-secondary p-1" title="Delete Key Result" (click)="removeKeyResult(kr._id, i)"
+              <button class="btn btn-sm btn-secondary p-1" title="Delete Key Result" (click)="removeKeyResult(i)"
                 id="remove">Remove</button>
             </div>
           </div>
