--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -6,7 +6,7 @@
   Add User
 </button>
 <app-new-user *ngIf="userForm" (hide)="hideUserForm($event)"></app-new-user>
-<div class="table-responsive-sm bg-light py-2 rounded mx-1">
+<div class="table-responsive-sm bg-light py-2 rounded mx-1 mb-4">
   <table class="table table-striped bg-light my-1">
     <thead>
       <tr style="border-top: 0">
