--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -24,7 +24,7 @@
             </a>
           </li>
           <li class="list-group-item active">
-            <a class="text-light ml-1" href="mailto:teodor.nilseng@gmail.com">
+            <a class="text-light" href="mailto:teodor.nilseng@gmail.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
               teodor.nilseng@gmail.com
             </a>
