--- a/src/app/okr/edit-okr/edit-okr.component.html
+++ b/src/app/okr/edit-okr/edit-okr.component.html
@@ -3,33 +3,38 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="modalLabel">Create a new OKR</h5>
+        <h5 class="modal-title" id="modalLabel">Edit OKR</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
 
-        <input class="form-control input-lg p-1" [(ngModel)]="okr.objective" placeholder="Objective" />
+        <input class="form-control input-lg p-1 mb-2" [(ngModel)]="okr.objective" placeholder="Objective" />
         <p *ngIf="noObjective" class=" alert alert-warning m-0 p-1">An objective is required to save an OKR</p>
         <div class="form-row bg-light rounded p-0 mx-0 my-1" *ngFor="let kr of okr.keyResults;index as i">
-          <div *ngIf="kr" class="form-group col-md-7 p-0 m-0">
+          <div *ngIf="kr" class="form-group col-md-8">
             <label class="badge m-0" for="keyResult">Key Result</label>
-            <input class="form-control input-sm p-1" [(ngModel)]="kr.keyResult" placeholder="Key Result"
+            <input class="form-control input-sm m-1" [(ngModel)]="kr.keyResult" placeholder="Key Result"
               id="keyResult" />
           </div>
           <div *ngIf="kr" class="form-group col-auto p-0 m-0">
             <label class="badge m-0" for="progress">Progress [%]</label>
-            <input type="number" class="form-control input-sm p-1 mx-1" [(ngModel)]="kr.progress" placeholder="0" min=0
+            <input type="number" class="form-control input-sm m-1" [(ngModel)]="kr.progress" placeholder="0" min=0
               max=100 id="progress" />
           </div>
           <div *ngIf="kr" class="form-group col-auto p-0 pt-4 m-0 ml-2">
             <label class="sr-only" for="remove">Remove</label>
-            <button class="btn btn-sm btn-secondary p-1" title="Delete Key Result" (click)="removeKeyResult(i)"
-              id="remove">Remove</button>
+            <button class="btn btn-sm btn-secondary mt-2 ml-1 mb-0 py-1" title="Delete Key Result"
+              (click)="removeKeyResult(i)" id="remove">
+              <fa-icon [icon]="faTrashAlt"></fa-icon>
+            </button>
           </div>
         </div>
-        <button class="btn btn-sm btn-secondary mt-1" (click)="addKeyResult()">Add</button>
+        <button class="btn btn-sm btn-secondary mt-1" (click)="addKeyResult()">
+          <fa-icon class="mr-1" [icon]="faPlusCircle"></fa-icon>
+          New Key Result
+        </button>
         <div class="form-group mt-2">
           <label class="mt-1" for="ownerSearchBox">Assigned to <span *ngIf="owner"
               class="badge badge-primary">{{owner.name}}</span></label>
