fixed bug when adding multiple child OKRs to the same parent OKR consequtively

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 <main class="bd-masthead bg-dark" role="main">
-  <div class="container-fluid pt-4" style="min-height: 70vh;">
+  <div class="container-fluid pt-4">
     <div class="row">
       <div class="col px-4">
         <router-outlet></router-outlet>
