--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,13 +8,13 @@
           <li class="list-group-item active">
             <a class="text-light" [routerLink]="['faq']">
               <fa-icon [icon]="faQuestionCircle"></fa-icon>
-              Frequently Asked Questions
+              About
             </a>
           </li>
         </ul>
       </div>
       <hr class="clearfix w-100 d-md-none pb-3">
-      <div class="col-md-3 mb-md-0 mb-3">
+      <div class="col-md-4 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
           <li class="list-group-item active">
