--- a/src/app/login/new-password/new-password.component.html
+++ b/src/app/login/new-password/new-password.component.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <label for="pwd">New password</label>
         <input id="pwd" type="password" class="form-control" 
-          name="pwd" placeholder="Password" (ngModel)="password"
+          name="pwd" placeholder="Password" [(ngModel)]="password"
           required>
         <div *ngIf="newPwdForm.controls.pwd?.invalid && 
           newPwdForm.controls.pwd?.dirty && newPwdForm.controls.pwd?.touched" 
