--- a/src/app/login/resetpassword/resetpassword.component.html
+++ b/src/app/login/resetpassword/resetpassword.component.html
@@ -4,7 +4,7 @@
       <div class="form-group">
         <label for="email">Email</label>
         <input id="email" name="email" type="email" class="form-control" required placeholder="Enter email"
-          (ngModel)="email">
+          [(ngModel)]="email">
       </div>
       <button type="submit" class="btn btn-primary">Reset password</button>
       <div *ngIf="loginMessage" class=" alert alert-warning my-2">{{loginMessage}}</div>
