--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -19,7 +19,7 @@
           </a>
         </li>
         <li *ngIf="auth.isLoggedIn()" class="nav-item">
-          <a routerLink="/company/users" class="nav-link">
+          <a routerLink="/users" class="nav-link">
             <fa-icon [icon]="faUsers"></fa-icon>
             Users
           </a>
