new message in case of no OKRs

--- a/src/app/okr-list/okr-list.component.html
+++ b/src/app/okr-list/okr-list.component.html
@@ -8,11 +8,12 @@
   </app-okr>
 </div>
 <div *ngIf="okrs?.length===0">
-  <div class="card">
+  <div class="card mb-4">
     <div class="card-body">
       <h5 class="card-title">It seems like you have no OKRs yet - select New OKR to create your first!</h5>
       <p class="card-text">
-        If you don't know what an OKR is, try a quick google search or feel free to send me an email.
+        If you don't know what an OKR is, try a quick google search or feel free to 
+        send us an <a href="mailto:contact@pureokrs.com">email</a>.
       </p>
     </div>
   </div>
