d3 hierarchy data structure implemented for okr list component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -17,12 +17,12 @@
       <div class="col-md-6 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
-          <li class="list-group-item active">
+          <!---<li class="list-group-item active">
             <a class="text-light" href="http://www.nilseng.com" target="_blank">
               <fa-icon [icon]="faBlog"></fa-icon>
               nilseng.com
             </a>
-          </li>
+          </li>--->
           <li class="list-group-item active">
             <a class="text-light" href="mailto:contact@pureokrs.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
@@ -33,5 +33,5 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2019 Copyright: Nilseng Danielsen Data</div>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: Teodor Nilseng Danielsen</div>
 </footer>
