--- a/src/app/okr-tree/okr-tree.component.html
+++ b/src/app/okr-tree/okr-tree.component.html
@@ -3,11 +3,11 @@
     <svg #svg [attr.height]="_height" [attr.width]="_width" style="margin:auto;display: block;">
         <rect [attr.height]="_height" [attr.width]="_width" rx="2" ry="2" fill="#f9f9f9"></rect>
         <g id="container" [zoomableOf]="svg" #container>
-            <g [edge]="edge" *ngFor="let edge of edges">
+            <g [edge]="edge" *ngFor="let edge of root.links()">
             </g>
-            <g *ngIf="root" [node]="root">
+            <g *ngIf="root" [okrTreeNode]="root">
             </g>
-            <g *ngFor="let node of nodes" [node]="node" (nodeShow)="pushChildren($event)"
+            <g *ngFor="let node of root.descendants()" [okrTreeNode]="node" (nodeShow)="pushChildren($event)"
                 (nodeHide)="hideChildren($event)">
             </g>
         </g>
