--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1,18 +1,24 @@
-<div class="text-light">
-    <h1>Frequently Asked Questions</h1>
-    <h3>What is Objectives and Key Results (OKRs)?</h3>
-    <p>It is a goal setting methodology for operationalizing a company's startegy. Objectives are main
-        goals, while key results are what you need to accomplish to reach the main goals. OKRs are
-        organized in a tree structure starting with high level OKRs which are broken down into smaller and 
-        smaller OKRs as the tree is traversed. The methodology is used by all kinds of companies - from
-        small tech startups to industrial giants.
-    </p>
-    <h3>What is the pricing of PureOKRs?</h3>
-    <p>It is free of charge until I decide otherwise. There will never be any costs for users registered
-        while it's free. The source code can also be downloaded from 
-        <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a> if you'd like to make changes and/or
-        handle hosting by yourself.
-    </p>
-    <h3>Is there a PureOKR mobile app?</h3>
-    <p>No, pureOKRs.com is developed for the browser on your mac, pc, phone and tablet. No app is needed.</p>
+<h3 class="text-light">About PureOKRs.com</h3>
+
+<div class="card my-2 border-0">
+    <h5 class="card-title pt-2 pl-2">What are Objectives and Key Results (OKRs)?</h5>
+    <div class="card-body">
+        <p>It is a goal setting methodology for operationalizing a company's strategy. Objectives are main
+            goals, while key results are what you need to accomplish to reach the main goals. OKRs are
+            organized in a tree structure starting with high level OKRs which are broken down into smaller and
+            smaller OKRs as the tree is traversed. The methodology is used by all kinds of companies - from
+            small tech startups to industrial giants.
+        </p>
+    </div>
+</div>
+
+<div class="card my-2 border-0">
+    <h5 class="card-title pt-2 pl-2">Business Model</h5>
+    <div class="card-body">
+        <p>PureOKRs is completely free of charge for now. There will never be any costs for users registered
+            while it's free. The source code can also be downloaded from
+            <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a> if you'd like to make 
+            changes and/or handle hosting by yourself.
+        </p>
+    </div>
 </div>
