--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -13,7 +13,7 @@
 </div>
 
 <div class="card my-2 border-0">
-    <h5 class="card-title pt-2 pl-2">Business Model</h5>
+    <h5 class="card-title pt-2 pl-2">PureOKRs Business Model</h5>
     <div class="card-body">
         <p>PureOKRs is completely free of charge for now. There will never be any costs for users registered
             while it's free. The source code can also be downloaded from
