--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -6,7 +6,7 @@
         <h5 class="text-uppercase">Resources</h5>
         <ul class="list-group">
           <li class="list-group-item active">
-            <a class="text-light" [routerLink]="['faq']">
+            <a class="text-light" [routerLink]="['about']">
               <fa-icon [icon]="faQuestionCircle"></fa-icon>
               About
             </a>
