changed company name

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,5 +33,5 @@
       </div>
     </div>
   </div>
-  <div class="footer-copyright text-center py-3">© 2020 Copyright: Teodor Nilseng Danielsen</div>
+  <div class="footer-copyright text-center py-3">© 2020 Copyright: PureOKRs AS</div>
 </footer>
