added privacy notice

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,18 +11,18 @@
               About
             </a>
           </li>
+          <li class="list-group-item active">
+            <a class="text-light" [routerLink]="['privacy']">
+              <fa-icon [icon]="faShieldAlt"></fa-icon>
+              Privacy
+            </a>
+          </li>
         </ul>
       </div>
       <hr class="clearfix w-100 d-md-none pb-3">
       <div class="col-md-6 mb-md-0 mb-3">
         <h5 class="text-uppercase">Get in touch</h5>
         <ul class="list-group">
-          <!---<li class="list-group-item active">
-            <a class="text-light" href="http://www.nilseng.com" target="_blank">
-              <fa-icon [icon]="faBlog"></fa-icon>
-              nilseng.com
-            </a>
-          </li>--->
           <li class="list-group-item active">
             <a class="text-light" href="mailto:contact@pureokrs.com">
               <fa-icon [icon]="faEnvelope"></fa-icon>
