--- a/src/app/okr-list/okr-node/okr-node.component.html
+++ b/src/app/okr-list/okr-node/okr-node.component.html
@@ -1,4 +1,4 @@
-<div class="okr card bg-light border-0 p-2 my-1">
+<div class="okr card rounded bg-light border-0 p-2 my-1">
   <span>
     <span class="dropdown">
       <a class="btn btn-sm bg-light p-0 m-0" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
