--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -35,14 +35,16 @@
         <div class="form-group">
           <label for="terms">
             <input id="terms" type="checkbox" name="terms" [(ngModel)]="terms">
-            <small class="ml-1">I accept that PureOKRs will store user emails and names using mLab, and that if users would like to be 
-            kept logged in, tokens in local storage can be used to achieve this.</small>
+            <small class="ml-1">
+              I accept that PureOKRs will process data as described <a routerLink="/privacy" target="_blank">here</a>.
+            </small>
           </label>
         </div>
         <div *ngIf="message" class=" alert alert-warning mx-1 my-0">{{message}}</div>
         <button type="submit" class="btn btn-success m-2" [disabled]="!terms">Register</button>
         <br>
-        <button type="button" class="btn btn-link btn-sm" [routerLink]="['/login']">Already have a user? Log in here.</button>
+        <button type="button" class="btn btn-link btn-sm" [routerLink]="['/login']">Already have a user? Log in
+          here.</button>
       </form>
     </div>
   </div>
