updates to the about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 <h3 class="text-light">About PureOKRs.com</h3>
 
-<div class="card my-2 border-0">
+<section class="card my-4 border-0 bg-dark text-light">
     <h5 class="card-title pt-2 pl-2">What are Objectives and Key Results (OKRs)?</h5>
     <div class="card-body">
         <p>It is a goal setting methodology for operationalizing a company's strategy. Objectives are main
@@ -10,15 +10,25 @@
             small tech startups to industrial giants.
         </p>
     </div>
-</div>
+</section>
 
-<div class="card my-2 border-0">
+<section class="card my-4 border-0 bg-dark text-light">
+    <h5 class="card-title pt-2 pl-2">Why PureOKRs?</h5>
+    <div class="card-body">
+        <p>
+            There are lots of OKR tools out there. However, most of them are unnecessary complex and make
+            it difficult to maintain the elegant simplicity of the OKR methodology. The purpose of PureOKRs
+            is to provide a tool that helps you keep track of your Objectives and Key Results. No more, no less. 
+        </p>
+    </div>
+</section>
+
+<section class="card my-4 border-0 bg-dark text-light">
     <h5 class="card-title pt-2 pl-2">PureOKRs Business Model</h5>
     <div class="card-body">
-        <p>PureOKRs is completely free of charge for now. There will never be any costs for users registered
-            while it's free. The source code can also be downloaded from
-            <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a> if you'd like to make 
+        <p>PureOKRs is free for the first 25 users per company. The source code can also be downloaded from
+            <a href="https://github.com/nilseng/pureokrs" target="_blank">GitHub</a> if you'd like to make
             changes and/or handle hosting by yourself.
         </p>
     </div>
-</div>
+</section>
