--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="col-sm pt-4">
-    <div class="text-light rounded p-4">
+    <section class="text-light rounded p-4">
       <h5>Why Objectives and Key Results?</h5>
       <ul>
         <li>
@@ -49,9 +49,9 @@
           Fully cloud based
         </li>
         <li>
-          Mobile First
+          Free for the first 25 users
         </li>
       </ul>
-    </div>
+    </section>
   </div>
 </div>
