--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -49,7 +49,12 @@
     </div>
   </div>
   <div class="col-sm pt-4">
-    <div class="text-light rounded p-4">
+    <section class="text-light rounded p-4">
+        <h5>Welcome!</h5>
+        <p>
+          Register your company and get started with creating your first objectives and key results.
+          It's simple and powerful.
+        </p>
       <h5>Why Objectives and Key Results?</h5>
       <ul>
         <li>
@@ -71,9 +76,9 @@
           Fully cloud based
         </li>
         <li>
-          Mobile First
+          Free for the first 25 users
         </li>
       </ul>
-    </div>
+    </section>
   </div>
 </div>
